<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>edu.ufl.bmi</groupId>
  <artifactId>dron-query</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>dron-query</name>
  <url>http://maven.apache.org</url>
<properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <compilerArgument>-Xlint:unchecked</compilerArgument>
    <compilerArgument>-Xlint:deprecated</compilerArgument>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
</properties>
  <build>
  <plugins>
  <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <configuration>
          <executable>java</executable>
          <arguments>
            <argument>-Xms2G</argument>
            <argument>-Xmx4G</argument>
            <argument>-XX:NewRatio=3</argument>
            <!--<argument>-XX:+PrintGCTimeStamps</argument>
            <argument>-XX:+PrintGCDetails</argument> 
            <argument>-Xloggc:gc.log</argument> -->
            <argument>-classpath</argument>
            <classpath/>
            <argument>edu.ufl.bmi.ontology.dronquery.DronDlQuery</argument>
	    <argument>-purl</argument>
	    <!-- <argument>https://raw.githubusercontent.com/ufbmi/obc-ide-owl/master/obc-ide-indexing-instances-and-classes.owl?token=ABMe9lxv2MaFf6aedX0pAamCp1NCcNd1ks5ZFcZOwA%3D%3D</argument> -->
	    <argument>http://purl.obolibrary.org/obo/dron/dev/dron.owl</argument>
	    <argument>-query</argument>
	    <!-- <argument>APOLLO_SV_00000516</argument>
	    <argument>-output</argument>
	    <argument>host-classes.txt</argument> -->
	    <!-- This query will retrieve all RxCuis for anti-hypertensive drug products and output them in a delimited text file called anti-hypertensive-rxcuis.txt  -->
		<argument>"'drug product' and ('is bearer of' some anti-hypertensive)"</argument> 
	        <argument>-output</argument>
	        <argument>anti-hypertensive-rxcuis.txt</argument>
	     

	    <!-- This query will retrieve all RxCuis for calcium channel blockers that are also anti-hypertensives and output them in a delimited text file called ca-channel-blocker-rxcuis.txt
		 <argument>"'drug product' and ('is bearer of' some anti-hypertensive) and (has_proper_part some ('has granular part' some ('is bearer of' some 'ca channel blocker')))"</argument>
		 <argument>-output</argument>
		 <argument>ca-channel-blocker-rxcuis.txt</argument> 
	      -->

	    <!-- This query will retrieve all RxCuis for beta blockers that are also anti-hypertensives and output them in a delimited text file called beta-blocker-rxcuis.txt		  
		 <argument>"'drug product' and ('is bearer of' some anti-hypertensive) and (has_proper_part some ('has granular part' some ('is bearer of' some 'beta blocker')))"</argument>
		 <argument>-output</argument>
		 <argument>beta-blocker-rxcuis.txt</argument>
            -->


	    <!-- This query will retrive all NDCs for packaged drug products with a drug product that is an anti-hypertensive and an ingredient that is a beta blocker
		 <argument>"'packaged drug product' and (has_proper_part some ('is bearer of' some anti-hypertensive) and (has_proper_part some ('has granular part' some ('is bearer of' some 'beta blocker'))))"</argument>
		 <argument>-output</argument>
		 <argument>beta-blocker-ndcs.txt</argument>
 -->


	    <!-- This query will retrieve all RxCuis for drugs with temozolomize and output them in a delimited text file called temozolomide-rxcuis.txt	  		
		 <argument>"'drug product' and (has_proper_part some ('has granular part' some DRON_00017608))"</argument>
		 <argument>-output</argument>
		 <argument>temozolomide-rxcuis.txt</argument>
	      -->


	    <!-- This query will retrieve all RxCuis for drugs with one of many oral hypoglycemic ingredients and output them in a delimited text file called oral-hypoglycemic-rxcuis.txt	   
		 <argument>"'drug product' and (has_proper_part some ('has granular part' some (CHEBI_3650 or DRON_00016824 or CHEBI_5441 or CHEBI_5383 or DRON_00017472 or DRON_00018346 or CHEBI_6801 or CHEBI_50122 or CHEBI_8228 or CHEBI_2376 or DRON_00011113 or CHEBI_40237 or DRON_00018127 or DRON_00012482 or CHEBI_28052 or DRON_00011751 or CHEBI_27999)))"</argument>
		 <argument>-output</argument>
		 <argument>temozolomide-rxcuis.txt</argument>
	         -->		

	    <!-- This query will retrieve all RxCuis for drugs with one of many ingredients with MOA for asthma and output them in a delimited text file called asthma-moa-rxcuis.txt	 
		 <argument>"'drug product' and (has_proper_part some ('has granular part' some ('is bearer of' some (DRON_00000061 or DRON_00000064 or DRON_00000062 or DRON_00000067 or DRON_00000060 or DRON_00000069 or DRON_00000071 or DRON_00000063 or DRON_00000066 or DRON_00000068 or DRON_00000070))))"</argument>
		 <argument>-output</argument>
		 <argument>asthma-moa-rxcuis.txt</argument>
  	         -->		



	    <!-- This query will retrieve all RxCuis for ACE inhibitors that are also anti-hypertensives and output them in a delimited text file called ace-inhibitor-rxcuis.txt		
		 <argument>"'drug product' and ('is bearer of' some anti-hypertensive) and (has_proper_part some ('has granular part' some ('is bearer of' some 'ACE inhibitor')))"</argument>
		 <argument>-output</argument>
		 <argument>ace-inhibitor-rxcuis.txt</argument>
	      -->

	    <!-- This query will retrieve all RxCuis for ARBs that are also anti-hypertensives and output them in a delimited text file called arb-inhibitor-rxcuis.txt
		 <argument>"'drug product' and ('is bearer of' some anti-hypertensive) and (has_proper_part some ('has granular part' some ('is bearer of' some ARB)))"</argument> 
	    <argument>-output</argument>
	    <argument>arb-inhibitor-rxcuis.txt</argument>
               -->

	    <!-- This query will retrieve all RxCuis for loop diuretics that are also anti-hypertensives and output them in a delimited text file called nkcc2-inhibitor-rxcuis.txt
	    <argument>"'drug product' and ('is bearer of' some anti-hypertensive) and (has_proper_part some ('has granular part' some ('is bearer of' some 'nkcc2 inhibitor')))"</argument> 
	    <argument>-output</argument>
	    <argument>nkcc2-inhibitor-rxcuis.txt</argument>
	     -->		

	    <!-- This query will retrieve all RxCuis for thiazide & thiazide-like diuretics that are also anti-hypertensives and output them in a delimited text file called thiazide-rxcuis.txt
		 <argument>"'drug product' and ('is bearer of' some anti-hypertensive) and (has_proper_part some ('has granular part' some ('is bearer of' some 'thiazide / thiazide like')))"</argument>  
		 <argument>-output</argument>
		 <argument>thiazide-rxcuis.txt</argument>
              -->

	    <!-- This query will retrieve all RxCuis for anti-malarial drug products 		
		 <argument>"'drug product' and ('is bearer of' some anti-malarial)"</argument>
		 <argument>-output</argument>
		 <argument>anti-malarial-rxcuis.txt</argument>
		 -->


	    <!-- This query will retrive all RxCuis for analgesics that have an ingredient that is a mu agonist	
		 <argument>"'drug product' and ('is bearer of' some analgesic) and (has_proper_part some ('has granular part' some ('is bearer of' some 'mu agonist')))"</argument>
		 <argument>-output</argument>
		 <argument>analgesic-mu-agonist-rxcuis.txt</argument>
		 -->
	

          </arguments>
        </configuration>
 </plugin>
<plugin>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-dependency-plugin</artifactId>
    <executions>
        <execution>
            <id>copy-dependencies</id>
            <phase>prepare-package</phase>
            <goals>
                <goal>copy-dependencies</goal>
            </goals>
            <configuration>
                <outputDirectory>${project.build.directory}/lib</outputDirectory>
                <overWriteReleases>false</overWriteReleases>
                <overWriteSnapshots>false</overWriteSnapshots>
                <overWriteIfNewer>true</overWriteIfNewer>
            </configuration>
        </execution>
    </executions>
</plugin>
 </plugins>
 </build>
 <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>net.sourceforge.owlapi</groupId>
      <artifactId>owlapi-distribution</artifactId>
      <version>4.5.22</version>
      </dependency>
    <dependency>
      <groupId>org.semanticweb.elk</groupId>
      <artifactId>elk-owlapi</artifactId>
      <version>0.4.3</version>
      </dependency>
    <dependency>
      <groupId>commons-cli</groupId>
      <artifactId>commons-cli</artifactId>
      <version>1.3.1</version>
    </dependency>  
    <dependency>
      <groupId>net.sourceforge.owlapi</groupId>
      <artifactId>org.semanticweb.hermit</artifactId>
      <version>1.3.8.413</version>
    </dependency>
  </dependencies>
 </project>
